--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: fastpages
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+title: Reducing conflict by improving water access in Uganda
+description: Capstone project for Brainstation's Data Science bootcamp, completed in August 2022 in London.
 github_username: thomas0299
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "futuristic-platipus"
@@ -43,13 +43,13 @@ minima:
     github: fastai
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: true
 
 # Set this to true to display the summary of your blog post under your title on the Home page.
 show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: false
+show_image: true
 
 # Set this to true to turn on annotations with hypothes.is (https://web.hypothes.is/)
 annotations: false
